--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.16",
+    "cors": "^2.8.5",
     "electron-is-dev": "^2.0.0",
+    "express": "^4.18.2",
+    "npm": "^10.2.4",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "tailwindcss": "^3.3.5",
     "web-vitals": "^2.1.4"
   },
@@ -23,13 +28,18 @@
     "appId": "org.sss.electron-react"
   },
   "scripts": {
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "react-start": "react-scripts start",
     "react-build": "react-scripts build",
     "start": "concurrently \"cross-env NODE_ENV=development BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && electron .\"",
     "build": "npm run react-build && electron-builder",
-    "release": "npm run react-build && electron-builder --publish=always"
+    "release": "npm run react-build && electron-builder --publish=always",
+    "start-react": "react-scripts start",
+    "start-socketio": "node socketServer.js",
+    "electron": "electron ."
   },
   "eslintConfig": {
     "extends": [
