--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "electron-is-dev": "^2.0.0",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "npm": "^10.2.4",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
