--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "electron-is-dev": "^2.0.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "npm": "^10.2.4",
+    "path": "^0.12.7",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
