--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "shelljs": "^0.8.5",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "^3.3.5",
